# simple-weather-astrobox-v2-plugin

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  manifest.json
old/: index.js
release/: manifest.json  simple-weather-astrobox-v2-plugin.wasm
scripts/: build_dist.py
src/: lib.rs  logger.rs
src/ui/: api_client.rs  build.rs  device.rs  event_handler.rs  icons.rs  message.rs  mod.rs  state.rs  supabase.rs  validation.rs
